--- a/wishlist.html
+++ b/wishlist.html
@@ -71,30 +71,27 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col col-12 col-sm-4 col-md-4">
-                        <div class="card">
+                        <div class="card-wishlist">
                             <div class="card-body">
-                                <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px"
-                                    alt="avatar">
-                                <div>
-                                    <h4 class="card-title">Nombre: Doki</h4>
-                                    <p class="card-text">Birthday: 21/04/2019</p>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title"><a>Tipo: Bulldog Francés</a></h4>
-                                <hr class="my-4">
-                                <p class="lead"><strong>Datos del Contacto</strong></p>
-                                <ul class=".bg-light">
-                                    <li class=".bg-light">Luis Besil<i class=""> </i></li>
-                                    <li class=".bg-light">094 236 444<i class=""></i></li>
-                                    <li class=".bg-light">l.besil@observador.com.uy<i class=""></i></li>
+                                <img src="assets/Logo-03.png" class="rounded-circle">
+                                <h3 class="card-title"><strong>Doki</strong></h3>
+                                <button type="button" class="btn btn-danger btn-outline-dark btnCerrarCard">x</button>
+                                <h5 class="card-text">21/04/2019</h5>
+                                <h5 class="card-title">Bulldog Francés</h5>
+                                <hr />
+                                <hr />
+                                <h5 class="card-title"><strong>Datos del Contacto</strong></h5>
+                                <ul class="">
+                                    <li class="">Luis Besil</li>
+                                    <li class="">094 236 444</li>
+                                    <li class="">l.besil@observador.com.uy</li>
                                 </ul>
-                                <button type="button" class="btn btn-warning">Quitar</button>
-                                <hr class="my-4">
 
-                                <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+
+                                <hr />
+                                <button type="button" class="btn btn-success btn-block">Adoptar</button>
+                                <br />
                             </div>
-                            <hr class="my-4">
                         </div>
                     </div>
                 </div>
@@ -102,24 +99,20 @@
         </section>
     </main>
 
-    <!--FOOTER-->
-
-    <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
-            <span class="second-line">All Rights Reserved.</span>
-        </p>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+     <!--FOOTER-->
+     <hr />
+     <footer>
+         <div class="container">
+             <div class="row justify-content-center">
+                 <div class="col col-12">
+                     <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com " target="_blank">Luis Besil</a>.
+                         <span class="second-line ">All Rights Reserved.</span>
+                     </p>
+                    
+                 </div>
+             </div>
+         </div>
+     </footer>
 
 </body>
 <script src="datos.js"></script>
