--- a/animal.html
+++ b/animal.html
@@ -30,16 +30,16 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="trans nav-link" href="list.html">Inicio <span class="sr-only"></span></a>
-                </li>
+                </p></li>
                 <li class="nav-item active">
                     <a class="trans nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
-                </li>
+                </p></li>
                 <li class="nav-item active">
                     <a class="trans nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
-                </li>
+                </p></li>
                 <li class="nav-item active">
                     <a class="trans nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
-                </li>
+                </p></li>
             </ul>
 
 
@@ -49,25 +49,25 @@
                         <a href="https://www.facebook.com" target="_blank"><img
                                 src="https://img.icons8.com/color/30/000000/facebook.png"></a>
                     </figure>
-                </li>
+                </p></li>
                 <li class="trans nav-item">
                     <figure class="figure">
                         <a href="https://www.instagram.com" target="_blank"><img
                                 src="https://img.icons8.com/color/30/000000/instagram-new.png"></a>
                     </figure>
-                </li>
+                </p></li>
                 <li class="nav-item">
                     <figure class="figure">
                         <a href="https://www.twitter.com" target="_blank"><img
                                 src="https://img.icons8.com/color/30/000000/twitter.png"></a>
                     </figure>
-                </li>
+                </p></li>
                 <li class="nav-item">
                     <figure class="figure">
                         <a href="https://fedsenpai.slack.com/messages" target="_blank"><img
                                 src="https://img.icons8.com/color/30/000000/slack.png"></a>
                     </figure>
-                </li>
+                </p></li>
             </ul>
 
             <br>
@@ -118,10 +118,10 @@
                         <h4 class="card-title">Bulldog Francés</h4>
                     </div>
                     <hr />
-                    <ul class="">
-                        <li class="">Nació el: 21/04/2019</li>
-                        <li class="">Color de pelo: Negro</li>
-                        <li class="">Color de ojos: Marrón</li>
+                    <ul class="card-text">
+                        <li><p>Nació el: 21/04/2019</p></li>
+                        <li><p>Color de pelo: Negro</p></li>
+                        <li><p>Color de ojos: Marrón</p></li>
                     </ul>
                     <hr />
                     <p>There are many variations of passages of Lorem Ipsum available, but
@@ -134,16 +134,16 @@
                     </p>
                     <hr />
                     <p class="lead"><strong>Datos del Contacto</strong></p>
-                    <ul class="">
-                        <li class="">Nombre: Luis Besil</li>
-                        <li class="">Telefono / Celular: 094 236 444</li>
-                        <li class="">Email: l.besil@gmail.com</li>
-                        <li class="">Barrio: Parque Batlle</li>
+                    <ul class="card-text">
+                        <li><p>Nombre: Luis Besil</p></li>
+                        <li><p>Telefono / Celular: 094 236 444</p></li>
+                        <li><p>Email: l.besil@gmail.com</p></li>
+                        <li><p>Barrio: Parque Batlle</p></li>
                     </ul>
-                    <button type="button" class="btn btn-info">Contactar</button>
+                    <button type="button" class="btn btn-info shadow rounded">Contactar</button>
                     <hr />
                     <!-- Button -->
-                    <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                    <button type="button" class="btn btn-success btn-block shadow p-3 rounded">Adoptar</button>
                 </div>
             </div>
         </div>
