--- a/animal.html
+++ b/animal.html
@@ -133,7 +133,7 @@
                         veniam optio tempore, fuga magnam odio ullam similique rem est? Cupiditate, eos.
                     </p>
                     <hr />
-                    <p class="lead"><strong>Datos del Contacto</strong></p>
+                    <p class="card-text">Datos del Contacto</p>
                     <ul class="card-text">
                         <li><p>Nombre: Luis Besil</p></li>
                         <li><p>Telefono / Celular: 094 236 444</p></li>
