--- a/animal.html
+++ b/animal.html
@@ -87,37 +87,16 @@
 
     <div class="container">
         <div class="row">
-            <div class="col col-sm-12 col-md-6">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/carr_01.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/carr_02.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/carr_03.jpg" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
+            
 
             <div class="col col-sm-12 col-md-6">
-                <div class="card card-body">
+                <div class="card cardAnimal card-body">
                     <div class="cardFicha">
                         <h4 class="card-title font-weight-bold">Doki</h4>
                         <h4 class="card-title">Bulldog Francés</h4>
                     </div>
                     <hr />
+                    <h4 class="card-text">Características</h4>
                     <ul class="card-text">
                         <li><p>Nació el: 21/04/2019</p></li>
                         <li><p>Color de pelo: Negro</p></li>
@@ -133,7 +112,7 @@
                         veniam optio tempore, fuga magnam odio ullam similique rem est? Cupiditate, eos.
                     </p>
                     <hr />
-                    <p class="card-text">Datos del Contacto</p>
+                    <h4 class="card-text">Datos del Contacto</h4>
                     <ul class="card-text">
                         <li><p>Nombre: Luis Besil</p></li>
                         <li><p>Telefono / Celular: 094 236 444</p></li>
@@ -146,6 +125,36 @@
                     <button type="button" class="btn btn-success btn-block shadow p-3 rounded">Adoptar</button>
                 </div>
             </div>
+
+            <div class="col col-sm-12 col-md-6">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/carr_01.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/carr_02.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/carr_03.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                    <img src="assets/carr_04.jpg" class="d-block w-100" alt="...">
+                                </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <hr />
+                    <a href="https://freshpet.com/ " target="_blank "><img src="assets/publicidad_04.jpg" class="card-img-top " alt="... "></a>
+                </div>
+
         </div>
     </div>
 
