--- a/wishlist.html
+++ b/wishlist.html
@@ -101,7 +101,28 @@
             <div class="container">
                 <div class="row justify-content-center" id="animal-list">
                     <!-- DATOS DINAMICOS -->
-
+                    <div class="col col-12 col-sm-4 col-md-4">
+                            <div class="card-wishlist">
+                                <div class="card-body">
+                                    <img src="assets/Logo-03.png" class="rounded-circle">
+                                    <h3 class="card-titleWish">Doki</h3>
+                                    <button type="button" class="btn btn-danger btn-outline-dark btnCerrarCard">x</button>
+                                    <h5 class="card-text">21/04/2019</h5>
+                                    <h5 class="card-titleWish">Bulldog Francés</h5>
+                                    <hr />
+                                    
+                                    <h4 class="card-titleWish">Datos del Contacto</h4>
+                                    <ul class="ulWishlist">
+                                        <li>Luis Besil</li>
+                                        <li>094 236 444</li>
+                                        <li>l.besil@observador.com.uy</li>
+                                    </ul>
+                                    <hr />
+                                    <button type="button" class="btn btn-success btn-block">Adoptar</button>
+                                    <br />
+                                </div>
+                            </div>
+                            </div>
                 </div>
             </div>
         </section>
