--- a/list.html
+++ b/list.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
+                    <a class="nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
