--- a/wishlist.html
+++ b/wishlist.html
@@ -100,7 +100,19 @@
 
             <div class="container">
                 <div class="row justify-content-center" id="animal-list">
-                    <!-- DATOS DINAMICOS -->
+                    <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                        <div class="card cardLista">
+                            <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
+                            <div class="card-body">
+                                <h5 class="card-title">Max</h5>
+                                <button type="button" class="btn btn-danger btn-outline-dark btnCerrarCard">x</button>
+                                <p class="card-text">
+                                    Some quicktitle and make up the bulk of the card's content.
+                                </p>
+                                <button type="button" class="btn btn-success btn-block">Adoptar</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col col-12 col-sm-4 col-md-4">
                             <div class="card-wishlist">
                                 <div class="card-body">
