--- a/list.html
+++ b/list.html
@@ -111,6 +111,7 @@
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                                 <div class="card cardLista">
+                                        <img class="wish btn btn-block" src="assets/heart.png">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Max</h5>
