--- a/_list.html
+++ b/_list.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -18,8 +17,7 @@
     </header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -39,19 +37,23 @@
                     <a class="nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
-            <button class="LogIn btn btn-outline-light" type="submit"> LogIn - Register</button>
+            <form class="form-inline my-2 my-lg-0">
+            </form>
+
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
+                Register
+            </button>
         </div>
     </nav>
 
     <div class="logo">
-        <img src="assets/Patitas-01.jpg" class="logo img-responsive" alt="Logo Patitas" title="Patitas">
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas" title="Patitas">
     </div>
-    <hr />
 
     <main>
         <section>
             <div class="container-fluid">
-                <div class="row">
+                <div class="rowPrincipal row">
                     <div class="serchVerticalL col col-2 d-none d-md-block">
                         <form class="form" action="">
                             <p>
@@ -109,9 +111,8 @@
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                                 <div class="card cardLista">
+                                        <img class="wish btn btn-block" src="assets/heart.png">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish card-img-overlay card-imagen d-flex"
-                                        src="assets/icono_heart.png">
                                     <div class="card-body">
                                         <h5 class="card-title">Max</h5>
                                         <p class="card-text">
@@ -121,61 +122,76 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish card-img-overlay shadow p-3 mb-5 card-imagen d-flex"
-                                        src="assets/heart.png">
+                            <div class="col col-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
-                                        <h5 class="card-title">Max</h5>
+                                        <h5 class="card-title">Dante</h5>
                                         <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf wef wef ew fe fo build on the card title and make up the bulk of the card's content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
+                            <div class="col col-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Rosita</h5>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit? Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos debitis facilis blanditiis accusantium
+                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam consequatur quam. Officiis quidem cupiditate ipsum!
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish btn btn-block card-img-overlay card-imagen d-flex align-items-center"
-                                        src="assets/icono_heart.png">
+                                    <div class="card-body ">
+                                        <h5 class="card-title ">Catalina</h5>
+                                        <p class="card-text ">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio quia ipsam qui porro, totam
+                                            repudiandae quis necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi officiis dicta perferendis dolore incidunt officia aut.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block ">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
-                                        <h5 class="card-title">Max</h5>
+                                        <h5 class="card-title ">Juan Carlos</h5>
                                         <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora repudiandae veritatis hic dolorem nemo odio, repellat quo tempore dignissimos animi.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish btn btn-block card-img-overlay card-imagen d-flex align-items-center"
-                                        src="assets/heart.png">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Max</h5>
-                                        <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                     <aside class="serchVerticalR col col-12 col-sm-4 col-md-2 col-lg-2">
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg" class="card-img-top" alt="... "></a>
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg" class="card-img-top" alt="... "></a>
                         <hr />
                     </aside>
                 </div>
@@ -198,15 +214,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
