--- a/list.html
+++ b/list.html
@@ -108,6 +108,7 @@
                     <div class="col col-12 col-sm-8 col-md-8">
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                                    <i class="btn material-icons">delete</i>
                                 <div class="card cardLista">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <img class="wish card-img-overlay card-imagen d-flex"
@@ -125,7 +126,8 @@
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish card-img-overlay shadow p-3 mb-5 card-imagen d-flex"
+                                   
+                                    <img class="wish card-img-overlay.material-icons d-flex"
                                         src="assets/heart.png">
                                     <div class="card-body">
                                         <h5 class="card-title">Max</h5>
